--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -45,6 +45,41 @@
       primaryClass={cs.DL}
 }
 
+@techreport{Dallmeier_2010,
+title = {{Open Access Publishing - Models and Attributes}},
+author = {Dallmeier-Tiessen, Suenje and Goerner, Bettina and Darby, Robert and Hyppoelae, Jenni and Igo-Kemenes, Peter and Kahn, Deborah and Lambert, Simon and Lengenfelder, Anja and Leonard, Chris and Mele, Salvatore and Polydoratou, Panayiota and Ross, David and Ruiz-Perez, Sergio and Schimmer, Ralf and Swaisland, Mark and van der Stelt, Wim},
+editor = {The SOAP consortium},
+language = {eng},
+year = {2010},
+date = {2010},
+abstract = {{The SOAP (Study of Open Access Publishing) project has compiled data on the present offer for open access publishing in online peer-reviewed journals. Starting from the Directory of Open Access Journals, several sources of data are considered, including inspection of journal web site and direct inquiries within the publishing industry. Several results are derived and discussed, together with their correlations: the number of open access journals and articles; their subject area; the starting date of open access journals; the size and business models of open access publishers; the licensing models; the presence of an impact factor; the uptake of hybrid open access. In addition, a number of qualitative features of open access publishing, relevant to understand the present landscape, are described.}},
+}
+
+@article{Sch_nfelder_2020, title={Article processing charges: Mirroring the citation impact or legacy of the subscription-based model?}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00015}, DOI={10.1162/qss_a_00015}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schönfelder, Nina}, year={2020}, month=feb, pages={6–27} }
+
+@article{Shu_2023, title={The oligopoly of open access publishing}, volume={129}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-023-04876-2}, DOI={10.1007/s11192-023-04876-2}, number={1}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Shu, Fei and Larivière, Vincent}, year={2023}, month=dec, pages={519–536} }
+
+
+@article{Butler_2023, title={The oligopoly’s shift to open access: How the big five academic publishers profit from article processing charges}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00272}, DOI={10.1162/qss_a_00272}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Butler, Leigh-Ann and Matthias, Lisa and Simard, Marc-André and Mongeon, Philippe and Haustein, Stefanie}, year={2023}, month=dec, pages={1–22} }
+
+@article{Bj_rk_2017, title={Growth of hybrid open access, 2009–2016}, volume={5}, ISSN={2167-8359}, url={http://dx.doi.org/10.7717/peerj.3878}, DOI={10.7717/peerj.3878}, journal={PeerJ}, publisher={PeerJ}, author={Björk, Bo-Christer}, year={2017}, month=sep, pages={e3878} }
+
+@article{Fraser_2023, title={No deal: German researchers’ publishing and citing behaviors after Big Deal negotiations with Elsevier}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00255}, DOI={10.1162/qss_a_00255}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Fraser, Nicholas and Hobert, Anne and Jahn, Najko and Mayr, Philipp and Peters, Isabella}, year={2023}, pages={325–352} }
+
+@article{Schiltz_2018, title={Science without publication paywalls: cOAlition S for the realisation of full and immediate Open Access}, volume={16}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3000031}, DOI={10.1371/journal.pbio.3000031}, number={9}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Schiltz, Marc}, year={2018}, month=sep, pages={e3000031} }
+
+@article{Mittermaier_2021,
+ doi = {10.5282/O-BIB/5731},
+ author = {Mittermaier, Bernhard},
+ title = {{Rolle des Open Access Monitor Deutschland bei der Antragstellung im DFG-Förderprogramm Open-Access-Publikationskosten}},
+ journal = {{o-bib. Das offene Bibliotheksjournal / Herausgeber VDB}},
+ issue = 4,
+ volume = 8,
+ publisher = {{o-bib. Das offene Bibliotheksjournal}},
+ year = {2021}}
+ 
+ 
+ @article{BJ_RK_2014, title={How research funders can finance APCs in full OA and hybrid journals}, volume={27}, ISSN={1741-4857}, url={http://dx.doi.org/10.1087/20140203}, DOI={10.1087/20140203}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={BJÖRK, Bo‐Christer and SOLOMON, David}, year={2014}, month=apr, pages={93–103} }
 %%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
@@ -199,7 +234,7 @@
   author = {Michael Jubb and Andrew Plume and Stephanie Oeben and Lydia Brammer and Rob Johnson and Cihan Bütün and Stephen Pinfield},
   title = {Monitoring the transition to open access: December 2017},
   year = 2017,
-  url = {https://www.universitiesuk.ac.uk/policy-and-analysis/reports/Documents/2017/monitoring-transition-open-access-2017.pdf}
+  url = {https://web.archive.org/web/20200212015524/https://www.universitiesuk.ac.uk/policy-and-analysis/reports/Documents/2017/monitoring-transition-open-access-2017.pdf}
 }
 
 @dataset{Kramer_2018,
