--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -60,38 +60,85 @@ najko.jahn@sub.uni-goettingen.de
 \section{Introduction}\label{introduction}}
 
 For over two decades, hybrid open access journal publishing, which makes
-some articles freely available under an open license while others remain
-behind a paywall, has been discussed as a model for transitioning the
-subscription system to full open access (Prosser, 2003). The idea was
-that when journals publish more and more open access articles, they
-could reduce revenues from subscriptions, while libraries and funders
-could change their funding models and shift expenditures from
-subscription to open access. However, initial approaches, mainly based
-on publication fees, also called article processing charges (APCs), did
-not contribute substantially to an large open access uptake. In 2012 ddd
-- at the same time
+some articles openly available while others remain behind a paywall, has
+been discussed as a model for transitioning the subscription system to
+full open access (Prosser, 2003). The idea was that when journals
+publish more and more open access articles, they could reduce revenues
+from subscriptions, while libraries and funders could change their
+funding models and shift expenditures from subscription to open access.
+However, initial approaches, mainly based on publication fees, also
+called article processing charges (APCs), did not contribute
+substantially to an large open access uptake. In 2009, Springer reported
+open access to 1\% of articles in hybrid journals (Dallmeier-Tiessen et
+al., 2010). Other publishers also recorded a low uptake. In 2011, only
+1-2\% of articles in over 4,300 hybrid journals from large publishers
+were open access (Björk, 2012), growing to around 4\% between 2011 and
+2013 (Laakso \& Björk, 2016).
 
-Tthe introduction of transformative agreements, a collective term for
-agreements starting from mid-2015, has resulted in a new push for hybrid
-open access. In particular, the Max Planck Society's Berlin 2020
-initiative and plan has advocated these types of agreements as a
-transitional means to progress with open access. As a result, more than
-800 transformative agreements have been tracked so far, which have been
-instrumental in funding activities and controversies. today, all
-publsiehrs offer such agreements
+With the introduction of central funding mechanisms for hybrid open
+access publication fees in a few countries since 2012, notably in the
+UK, an increase in open access could be observed (Björk, 2017; Jubb et
+al., 2017; Robinson-Garcia et al., 2020). However, this shift in funding
+policy towards hybrid open access also added to the overall cost of
+publishing, which includes subscriptions spending and the administrative
+efforts required to handle payments (Pinfield et al., 2016). Moreover,
+established large commercial publishers, which already dominated the
+publishing market (Larivière et al., 2015), disproportionately benefited
+from hybrid open access funding in comparison to full open access
+publishers (Butler et al., 2023; Jahn \& Tullney, 2016; Shu \&
+Larivière, 2023).
+
+As a consequence, libraries and their consortia began to develop
+licensing strategies aimed at avoiding such `double dipping' scenarios,
+in which well-established commercial publishers gain twice from reading
+and publication fees, as well as to increase publisher-provided
+immediate open access (BJÖRK \& SOLOMON, 2014; Schimmer et al., 2015).
+These considerations resulted into transformative agreements, which
+cover a broad range of successfully negotiated contracts between library
+consortia and publishers from mid-2010s onwards where institutional
+spending for subscriptions are re-purposed for open access publishing
+(Borrego et al., 2020). These transformative agreements seek to control
+costs while allowing a transitional phase for publishing more open
+access articles (Hinchliffe, 2019). At the same time, they aim at a
+higher degree of transparency than previous subscription-only Big Deals,
+which bundled access to large journal portfolios of commercial
+publishers (Bergstrom et al., 2014). However, the focus of
+transformative agreements remains primarily on these publishers with
+large hybrid journals and subscription-only portfolios (Borrego et al.,
+2020). For example, the nationwide DEAL consortium in Germany, which
+includes universities and academic institutions, collectively cancelled
+their subscriptions with Elsevier from 2017 onwards to negotiate a
+transformative agreement (Fraser et al., 2023).
+
+The introduction of transformative agreements aligns with funding policy
+changes, such as the decision made by the cOAlition S, a consortium of
+national funders including the European Commission, to no longer provide
+financial support for individual publication fees when publishing in
+hybrid journals. According ot its Plan S, they only accept hybrid open
+access through transformative agreements ``during a transition period
+that should be as short as possible'' (Schiltz, 2018). Specifically,
+cOAlition S funders agreed to support hybrid open access solely through
+transformative agreements from 1 January 2021, until the end of 2024.
+The German Research Foundation (DFG) has also extended its financial
+support for hybrid open access through transformative agreements,
+despite not being part of cOAlition S. Previously, the DFG only provided
+funding for full open access journals (Jahn \& Tullney, 2016).
 
 Advocates of these agreements argue that they not only overcome the
-issue of double-dipping but also help to shift library spending from
-subscriptions to publications, streamline expenditures, and offer more
-value than big deals, which focus on large publishers. A few agreements
-can impact an institution's open access share, resulting in a
-significant proportion of open access content. increase transparency
+issue standardiazation of double-dipping but also help to shift library
+spending from subscriptions to publications, streamline expenditures,
+and offer more value than big deals, which focus on large publishers. A
+few agreements can impact an institution's open access share, resulting
+in a significant proportion of open access content. increase
+transparency
 
 However, opponents of transformative agreements perceive continued
 reliance on big deals as problematic. They argue that the focus on large
 publishers perpetuates the business relationships that led to the serial
 crisis and lacks evidence that this leads to a reduction of In addition,
-concerns over inequality abound. could not benn mass removal
+concerns over inequality abound. trnasparency differ and now nsns
+
+could not benn mass removal
 
 Effects can be seen, mixed consequences. some countries who have
 introduced this fundign effects netherlands, sweden. no in germany,
@@ -539,9 +586,16 @@ evident when considering open access through transformative agreements,
 as 310,712 of 328,957, or 94\% of open access articles were associated
 with such agreements.
 
-\begin{center}\includegraphics[width=0.99\linewidth,]{fig/countrypatch-1} \end{center}
+\begin{figure}[ht!]
 
-Figure \ref{fig:countrypatch}A shows the development of hybrid open
+{\centering \includegraphics[width=0.99\linewidth,]{fig/country_patch-1} 
+
+}
+
+\caption{Development of hybrid open access publishing by countries}\label{fig:country_patch}
+\end{figure}
+
+Figure \ref{fig:country_patch}A shows the development of hybrid open
 access publishing by countries, comparing the OECD area with the BRICS,
 an intergovernmental organisation, which comprised the countries Brazil,
 Russia, India, China and South Africa in 2022. The residual category
@@ -566,7 +620,7 @@ publication output in Health Science Journals and Life Science journals
 stagnated across the investigated hybrid journal portfolios after a peak
 in 2020.
 
-To illustrate the situation in 2022, \ref{fig:countrypatch}B compares
+To illustrate the situation in 2022, \ref{fig:country_patch}B compares
 total publication output with the number of open access articles. With
 391,530 articles, China was the most productive country, followed by the
 United States (268,965 articles) and India (87,428 articles). In
@@ -582,16 +636,23 @@ market share of 15\%, although transformative agreements contributed to
 a lesser extent. Similarly, China's open access market share of 7.2 in
 2022 was comparable to that of the Netherlands, which was (7.1\%,).
 
-\begin{center}\includegraphics[width=0.99\linewidth,]{fig/countrytop20plot-1} \end{center}
+\begin{figure}[ht!]
 
-Figure \ref{fig:countrytop20plot} illustrates the development of hybrid
-open access from 2018 to 2022, highlighting the top 20 most productive
-countries in terms of articles published in hybrid journals that were
-included in transformative agreements over the five-year period.
-Notably, The Netherlands (27\%), Sweden (24\%), Poland (17\%) and Great
-Britain (17\%)) exhibited a relatively high level of uptake in 2018
-which continued to increase in the following years. In 2022, Sweden had
-the highest proportion of open-access articles relative to its
+{\centering \includegraphics[width=0.99\linewidth,]{fig/country_top_20_plot-1} 
+
+}
+
+\caption{Top 20 countries}\label{fig:country_top_20_plot}
+\end{figure}
+
+Figure \ref{fig:country_top_20_plot} illustrates the development of
+hybrid open access from 2018 to 2022, highlighting the top 20 most
+productive countries in terms of articles published in hybrid journals
+that were included in transformative agreements over the five-year
+period. Notably, The Netherlands (27\%), Sweden (24\%), Poland (17\%)
+and Great Britain (17\%)) exhibited a relatively high level of uptake in
+2018 which continued to increase in the following years. In 2022, Sweden
+had the highest proportion of open-access articles relative to its
 publication output (78\%), followed by the Netherlands (67\%) and
 Switzerland (57\%), with these countries benefiting from transformative
 agreements. In Germany, however, hybrid open access only began to
@@ -620,6 +681,27 @@ where only a few or no agreements were in place.
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-Bergstrom_2014}{}}%
+Bergstrom, T. C., Courant, P. N., McAfee, R. P., \& Williams, M. A.
+(2014). Evaluating big deal journal bundles. \emph{Proceedings of the
+National Academy of Sciences}, \emph{111}(26), 9425--9430.
+\url{https://doi.org/10.1073/pnas.1403006111}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Bj_rk_2012}{}}%
+Björk, B.-C. (2012). The hybrid model for open access publication of
+scholarly articles: A failed experiment? \emph{Journal of the American
+Society for Information Science and Technology}, \emph{63}(8),
+1496--1504. \url{https://doi.org/10.1002/asi.22709}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Bj_rk_2017}{}}%
+Björk, B.-C. (2017). Growth of hybrid open access, 2009--2016.
+\emph{PeerJ}, \emph{5}, e3878. \url{https://doi.org/10.7717/peerj.3878}
+
+\leavevmode\vadjust pre{\hypertarget{ref-BJ_RK_2014}{}}%
+BJÖRK, B., \& SOLOMON, D. (2014). How research funders can finance APCs
+in full OA and hybrid journals. \emph{Learned Publishing}, \emph{27}(2),
+93--103. \url{https://doi.org/10.1087/20140203}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Borrego_2020}{}}%
 Borrego, Á., Anglada, L., \& Abadal, E. (2020). Transformative
 agreements: Do they pave the way to open access? \emph{Learned
@@ -636,11 +718,29 @@ Butler, L.-A., Matthias, L., Simard, M.-A., Mongeon, P., \& Haustein, S.
 publishers profit from article processing charges. \emph{Quantitative
 Science Studies}, 1--22. \url{https://doi.org/10.1162/qss_a_00272}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Dallmeier_2010}{}}%
+Dallmeier-Tiessen, S., Goerner, B., Darby, R., Hyppoelae, J.,
+Igo-Kemenes, P., Kahn, D., Lambert, S., Lengenfelder, A., Leonard, C.,
+Mele, S., Polydoratou, P., Ross, D., Ruiz-Perez, S., Schimmer, R.,
+Swaisland, M., \& Stelt, W. van der. (2010). \emph{{Open Access
+Publishing - Models and Attributes}} (T. S. consortium, Ed.).
+
+\leavevmode\vadjust pre{\hypertarget{ref-Fraser_2023}{}}%
+Fraser, N., Hobert, A., Jahn, N., Mayr, P., \& Peters, I. (2023). No
+deal: German researchers' publishing and citing behaviors after big deal
+negotiations with elsevier. \emph{Quantitative Science Studies},
+\emph{4}(2), 325--352. \url{https://doi.org/10.1162/qss_a_00255}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Geschuhn_2017}{}}%
 Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
 required to make {``offsetting''} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Hinchliffe_2019}{}}%
+Hinchliffe, L. J. (2019). \emph{Transformative agreements: A primer}.
+\url{https://web.archive.org/web/20210128170342/https://scholarlykitchen.sspnet.org/2019/04/23/transformative-agreements/};
+The Scholarly Kitchen.
 
 \leavevmode\vadjust pre{\hypertarget{ref-jahn2023}{}}%
 Jahn, N., Haupka, N., \& Hobert, A. (2023). \emph{Analysing and
@@ -654,11 +754,33 @@ study of elsevier. \emph{Journal of the Association for Information
 Science and Technology}, \emph{73}(1), 104--118.
 \url{https://doi.org/10.1002/asi.24549}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Jahn_2016}{}}%
+Jahn, N., \& Tullney, M. (2016). A study of institutional spending on
+open access publication fees in germany. \emph{{PeerJ}}, \emph{4},
+e2323. \url{https://doi.org/10.7717/peerj.2323}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Jubb_2017}{}}%
+Jubb, M., Plume, A., Oeben, S., Brammer, L., Johnson, R., Bütün, C., \&
+Pinfield, S. (2017). \emph{Monitoring the transition to open access:
+December 2017}.
+\url{https://web.archive.org/web/20200212015524/https://www.universitiesuk.ac.uk/policy-and-analysis/reports/Documents/2017/monitoring-transition-open-access-2017.pdf}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Laakso_2016}{}}%
+Laakso, M., \& Björk, B.-C. (2016). Hybrid open access--a longitudinal
+study. \emph{Journal of Informetrics}, \emph{10}(4), 919--932.
+\url{https://doi.org/10.1016/j.joi.2016.08.002}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Larivi_re_2016}{}}%
 Larivière, V., Desrochers, N., Macaluso, B., Mongeon, P., Paul-Hus, A.,
 \& Sugimoto, C. R. (2016). Contributorship and division of labor in
 knowledge production. \emph{Social Studies of Science}, \emph{46}(3),
 417--435. \url{https://doi.org/10.1177/0306312716650046}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Larivi_re_2015}{}}%
+Larivière, V., Haustein, S., \& Mongeon, P. (2015). The oligopoly of
+academic publishers in the digital era. \emph{{PLOS} {ONE}},
+\emph{10}(6), e0127502.
+\url{https://doi.org/10.1371/journal.pone.0127502}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Mart_n_Mart_n_2018}{}}%
 Martín-Martín, A., Costas, R., Leeuwen, T. van, \& López-Cózar, E. D.
@@ -671,6 +793,14 @@ Marwick, B., Boettiger, C., \& Mullen, L. (2018). Packaging data
 analytical work reproducibly using r (and friends). \emph{The American
 Statistician}, \emph{72}(1), 80--88.
 \url{https://doi.org/10.1080/00031305.2017.1375986}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Pinfield_2016}{}}%
+Pinfield, S., Salter, J., \& Bath, P. A. (2016). The "total cost of
+publication" in a hybrid open-access environment: Institutional
+approaches to funding journal article-processing charges in combination
+with subscriptions. \emph{Journal of the Association for Information
+Science and Technology}, \emph{67}(7), 1751--1766.
+\url{https://doi.org/10.1002/asi.23446}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Piwowar_2018}{}}%
 Piwowar, H., Priem, J., Larivière, V., Alperin, J. P., Matthias, L.,
@@ -690,11 +820,27 @@ transforming journals from closed to open access. \emph{Learned
 Publishing}, \emph{16}(3), 163--166.
 \url{https://doi.org/10.1087/095315103322110923}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Robinson_Garcia_2020}{}}%
+Robinson-Garcia, N., Costas, R., \& Leeuwen, T. N. van. (2020). Open
+access uptake by universities worldwide. \emph{{PeerJ}}, \emph{8},
+e9410. \url{https://doi.org/10.7717/peerj.9410}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Schiltz_2018}{}}%
+Schiltz, M. (2018). Science without publication paywalls: cOAlition s
+for the realisation of full and immediate open access. \emph{PLOS
+Biology}, \emph{16}(9), e3000031.
+\url{https://doi.org/10.1371/journal.pbio.3000031}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Schimmer_2015}{}}%
 Schimmer, R., Geschuhn, K., \& Vogler, A. (2015). \emph{{Disrupting the
 subscription journals'business model for the necessary large-scale
 transformation to open access}}. Max Planck Digital Library.
 \url{https://doi.org/10.17617/1.3}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Shu_2023}{}}%
+Shu, F., \& Larivière, V. (2023). The oligopoly of open access
+publishing. \emph{Scientometrics}, \emph{129}(1), 519--536.
+\url{https://doi.org/10.1007/s11192-023-04876-2}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Zhang_2022}{}}%
 Zhang, L., Wei, Y., Huang, Y., \& Sivertsen, G. (2022). Should open
